# pybattlefactory

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
include/: ai.hpp  ai_context.hpp  ai_scripts.hpp  battle_engine.hpp  constants.hpp  data.hpp  factory.hpp  types.hpp
pybattle/: __init__.py  factory_hrl_env.py  pkmn_env.py
pybattle.egg-info/: PKG-INFO  SOURCES.txt
scripts/: convert_ai_scripts.py  extract_data.py
src/: ai.cpp  ai_context.cpp  ai_scripts.cpp  ai_vm.cpp  battle_engine.cpp  damage.cpp  factory.cpp  types.cpp
src/data/: frontier_mons.cpp  move_data.cpp  species_data.cpp  type_chart.cpp
src/python/: bindings.cpp
tests/: test_ai.cpp  test_battle.cpp  test_damage.cpp  test_factory.cpp
